<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:id="@+id/listViewConatiner"
    tools:context="com.archu.sushiapp.MainActivity">


    <TextView
        android:id="@+id/orderTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placed_order"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sumTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/placed_order"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recognizeBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/handwrittenBtn"
        style="@style/loginButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="activityHandwriting"
        android:text="@string/handwritten_recognize_code_btn"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/placeOrderBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:spinning_bar_color="#FFF"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp"/>

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/recognizeBtn"
        style="@style/loginButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:onClick="activityRecognize"
        android:text="@string/recognize_code_btn"
        app:layout_constraintBottom_toTopOf="@+id/handwrittenBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:spinning_bar_color="#FFF"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp"/>


    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/placeOrderBtn"
        style="@style/loginButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="formFragment"
        android:text="@string/order"
        app:initialCornerAngle="27dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:spinning_bar_color="#FFF"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />





    <ListView
        android:id="@+id/menuListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@+id/sumTxt"
        android:layout_marginBottom="32dp"
        android:clickable="false"
        android:focusable="false"
        android:listSelector="@android:color/transparent"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toTopOf="@+id/sumTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderTxt">

    </ListView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <include layout="@layout/toolbar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>