<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:id="@+id/cont">

    <androidx.cardview.widget.CardView
        android:id="@+id/nigiriView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="@color/nigiriView"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makiView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/nigiriBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/nigiriView"
                android:src="@drawable/nigiri" />

            <TextView
                android:id="@+id/nigiriTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/nigiri"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:visibility="visible" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/futomakiView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="@color/futomakiView"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uramakiView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/futomakiBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/futomakiView"
                android:src="@drawable/futomaki" />

            <TextView
                android:id="@+id/futomakiTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/futomaki"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:visibility="visible" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/makiView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/makiView"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativelayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/makiBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/makiView"
                android:src="@drawable/maki" />

            <TextView
                android:id="@+id/makiTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/maki"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="normal"
                android:visibility="visible" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/uramakiView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@color/uramakiView"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativelayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/uramakiBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/uramakiView"
                android:src="@drawable/uramaki"/>

            <TextView
                android:id="@+id/uromakiTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/uramaki"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="normal"
                android:visibility="visible" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sushi_vocabulary_blured" />

        <TextView
            android:id="@+id/myImageViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/headerImage"
            android:layout_alignTop="@id/headerImage"
            android:layout_alignRight="@id/headerImage"
            android:layout_alignBottom="@id/headerImage"
            android:layout_margin="1dp"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:text="@string/sushi_vocabulary_title" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <include layout="@layout/toolbar" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>